# PongNet

./: .gitignore  .gitmodules  AutoPlayer.cpp  AutoPlayer.h  Ball.cpp  Ball.hpp  CMakeLists.txt  Concepts.hpp  Constants.cpp  Constants.hpp  Game.cpp  Game.hpp  HumanPlayer.cpp  HumanPlayer.hpp  NetworkManager.hpp  Player.cpp  Player.hpp  README.md  State.fbs  State_generated.h  genFlatbuff.sh  main.cpp
.github/workflows/: cmake.yml
server/: GameServer.cpp  GameServer.hpp  go.sum  main.cpp  main.go
